0029184: Visualization - DrawWindow::Save() fails when using WinCodec with PNG codec

DrawWindow::Save() now uses Image_Format_BGR instead of Image_Format_BGR32
for better compatibility with image encoders when dumping WinAPI bitmap.